fix title spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -553,7 +553,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-title {
-    margin: 0;
     color: color(var(--darkgrey) l(-5%));
 }
 
